# synapse

./: README.md  pyproject.toml
synapse/: chatapp.py  main.py  welcome_screen.py
